@@ -259,7 +259,7 @@
             code=<<
 local debug_utils = wesnoth.dofile "~add-ons/Wesnoth_Lua_Pack/debug_utils.lua"
 
-local units = wesnoth.get_units({side = 2})
+local units = wesnoth.units.find_on_map({side = 2})
 
 debug_utils.dbms(units, true, "U", true, true, false)
 
