@@ -16,6 +16,7 @@ Version 1.8.0+git:
        * wesnoth.wml_actions.map -> wesnoth.wml_actions.map_data
        * helper.get_child() -> wml.get_child()
        * wesnoth.get_locations() -> wesnoth.map.find()
+       * wesnoth.get_units() -> wesnoth.units.find_on_map()
    * Deprecated `[get_numerical_minimum]`, `[get_numerical_maximum]` and `[reverse_value]`
    * Fixed a bug that made `[unknown_message]` not working
    * Bumped Wesnoth version requirement to 1.15.14
